hphp/test/zend/good/ext/sqlite3/tests/sqlite3stmt_reset_params.php.skipif
<?hh require_once(dirname(__FILE__) . '/skipif.inc');