hphp/test/zend/bad/ext/fileinfo/tests/finfo_open_error.php.skipif
<?php require_once(dirname(__FILE__) . '/skipif.inc'); 